cabal-version:      3.0
name:               hs-auto-marker
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
-- copyright:
category:           Automation
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hs-auto-marker
    import:           warnings
    main-is:          Main.hs
    other-modules:    Auth
    build-depends:    base ^>=4.17.0.0
                    , text
                    , webdriver 
                    , exceptions
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
